--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^7.4.2",
     "clsx": "1.2.1",
     "next": "13.4.10",
+    "prisma": "^7.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "^3.7.0"
@@ -20,6 +22,6 @@
     "autoprefixer": "10.4.14",
     "postcss": "8.4.24",
     "tailwindcss": "3.4.7",
-    "typescript": "5.2.2"
+    "typescript": "^5.9.3"
   }
 }
