refactor(db): replace Prisma with pure SQLite
- remove Prisma client, schema and generated artifacts
- implement direct SQLite layer with better-sqlite3 in lib/db.ts
- keep existing API contracts for /api/alerts and /api/sync-alerts
- add automatic table/index initialization and sync logging
- update env/dependencies and cleanup project docs/files

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@ WAZUH_API_URL=https://192.168.150.210
 WAZUH_API_TOKEN=
 WAZUH_USERNAME=
 WAZUH_PASSWORD=
+WAZUH_ES_USER=
+WAZUH_ES_PASSWORD=
+ELASTICSEARCH_URL=
+ELASTICSEARCH_USERNAME=
+ELASTICSEARCH_PASSWORD=
 
 # If your Wazuh instance uses a self-signed certificate, for local development you
 # can temporarily allow invalid TLS (not recommended for production):
