feat(ui): improve filtros de período e análises de alertas
- corrige filtro de datas (timezone-safe) no Dashboard e Detalhes

- atualiza Total de Alertas para refletir filtros aplicados

- adiciona gráfico Top 15 de Agentes no Detalhes

- adiciona paginação em lotes na coleta para Detalhes

- inclui utilitário npm para consultas SQLite (db:query/db:tables/db:schema)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "db:query": "node scripts/db-query.js",
+    "db:tables": "node scripts/db-query.js --tables",
+    "db:schema": "node scripts/db-query.js --schema"
   },
   "dependencies": {
     "better-sqlite3": "^12.6.2",
